--- a/index.html
+++ b/index.html
@@ -6,41 +6,31 @@
     <title>Patrick Menezes</title>
 </head>
 <body>
-    <h1>Hello, welcome to my page!!</h1>
+    <h1>
+        Hello, welcome to my page!
+    </h1>
     <p>
-        This site was made to show a bit of me, my work and what I already made, 
-        so follow me through my story.
-    </p>
-    <h2>Who am I?</h2>
-    <p>
-        My name is Patrick, I'm a brazillian developer with an Associate degree 
-        in Development and Analysis of Systems, and my profissional objective is
-        become an expert programmer in embedded systems area, focused in robotics.
-        
-        About my traits, i'm dedicated, creative and a quick-learner. I'm a great 
-        teamworker, adaptive, organized and an adept of continuous learning as well. 
-        Moved by an inovation thirst, always looking for a bright future, with the
-        dream of impact the world and humanity to a better tomorrow.
+        This is my portfolio and here you can see a bit about me, 
+        my story and my projects.
     </p>
     <h2>
-        Contacts
+        Who am I?
     </h2>
     <p>
-        <a href="+55 21 980615141">
-            Cellphone
-        </a>
-        <a href="patrick.menezes2001@gmail.com">
-            Email
-        </a>
-        <a href="https://www.linkedin.com/in/patrick-azevedo-de-menezes/">
-            Linkedin
-        </a>
+        My name is Patrick, I am a Software Developer with an Associate degree in
+        Development and Analysis of Systems and my profissional objetive is become
+        an embedded systems expert with a focus in robotics.
+        <br><br>
+        I am dedicated, creative and a quick-learner. I am a great teamworker, 
+        adaptive, organized and an adept of continuos learning as well. Moved by 
+        inovation, and always looking for a bright future with the dream to impact
+        the world and humanity for a better tomorrow.
     </p>
     <h2>
         My Projects
     </h2>
     <p>
-        Below, you can see some of my principal projects:
+        Below you can see some of my principal projects:
     </p>
     <h2>
         My Articles
@@ -49,11 +39,26 @@
         <a href="https://www.linkedin.com/pulse/solid-understandable-explanation-even-rocks-patrick-menezes/">
             SOLID - Understandable explanation even for rocks
         </a>
+        <br>
         <a href="https://www.linkedin.com/pulse/functional-programming-another-way-code-patrick-menezes/">
             Functional Programming - Another way to code
         </a>
-        <a href="https://www.linkedin.com/pulse/voc%25C3%25AA-ja-ouviu-falar-do-github-desktop-patrick-menezes/">
-            Você já ouviu falar do GitHub Desktop?
+        <br>
+        <a href="https://www.linkedin.com/pulse/voce-ja-ouviu-falar-do-github-desktop-patrick-menezes/">
+            Voce ja ouviu falar do GitHub Desktop?
+        </a>
+        <br>
+    </p>
+    <h2>
+        Contacts
+    </h2>
+    <p>
+        <a href="patrick.menezes2001@gmail.com">
+            Email
+        </a>
+        <br>
+        <a href="https://www.linkedin.com/in/patrick-azevedo-de-menezes/">
+            Linkedin
         </a>
     </p>
 </body>
